--- a/public/index.html
+++ b/public/index.html
@@ -1420,37 +1420,38 @@
                 fractionalAvailable: 4000,
                 tokenHolders: 76
             },
-            {
-                id: 4,
-                lotNumber: '004',
-                title: 'AN EXTRAORDINARILY RARE YUAN JILAN-GLAZED EWER',
-                chinese: '元 霽藍釉白龍紋梨形執壺',
-                dynasty: 'yuan',
-                dynastyInfo: 'Yuan Dynasty (1271-1368)',
-                imageOrientation: 'portrait',
-                images: [
-                    '/assets/images/relics/004-yuan-jilan-ewer/main.jpg',
-                    '/assets/images/relics/004-yuan-jilan-ewer/detail-1.jpg',
-                    '/assets/images/relics/004-yuan-jilan-ewer/detail-2.jpg',
-                    '/assets/images/relics/004-yuan-jilan-ewer/detail-3.jpg',
-                    '/assets/images/relics/004-yuan-jilan-ewer/detail-4.jpg'
-                ],
-                thumbnail: '/assets/images/relics/004-yuan-jilan-ewer/thumbnail.jpg',
-                placeholder: '/assets/images/relics/004-yuan-jilan-ewer/placeholder.jpg',
-                description: 'This spectacular ewer showcases the technical mastery achieved by Yuan potters in high-fired cobalt blue glazes. The dramatic contrast between the deep blue ground and white slip-painted dragon demonstrates the sophisticated decorative techniques of the period.',
-                estimate: { low: 250, high: 400 },
-                currentBid: 325,
-                bidCount: 41,
-                endTime: Date.now() + 86400000 * 8,
-                provenance: 'Private Japanese Collection, Kyoto\nFormerly in the Idemitsu Museum of Arts\nAcquired from Yamanaka & Co., Kyoto, 1955',
-                condition: 'Remarkable condition. Small chip to the spout professionally restored. The cobalt blue glaze of exceptional depth and brilliance.',
-                dimensions: 'Height: 31.3 cm\nWidth: 18.5 cm\nWeight: 1.45 kg',
-                literature: 'Published in "Yuan Blue and White Porcelain", National Palace Museum, Taipei, 1998, no. 47',
-                technicalNotes: 'The cobalt used in this piece has been identified through spectrographic analysis as imported Persian cobalt, confirming its imperial quality.',
-                culturalSignificance: 'Yuan dynasty blue and white represents a revolutionary moment in ceramic history, combining Chinese potting techniques with Islamic aesthetic preferences.',
-                fractionalAvailable: 3000,
-                tokenHolders: 92
-            },
+         // In your index.html, find the lot 004 object and replace it with this:
+{
+    id: 4,
+    lotNumber: '004',
+    title: 'AN EXTRAORDINARILY RARE YUAN JILAN-GLAZED EWER',
+    chinese: '元 霽藍釉白龍紋梨形執壺',
+    dynasty: 'yuan',
+    dynastyInfo: 'Yuan Dynasty (1271-1368)',
+    imageOrientation: 'portrait',
+    images: [
+        'https://raw.githubusercontent.com/jnodes/shenbury/main/public/assets/images/relics/004-yuan-jilan-ewer/main.jpg',
+        'https://raw.githubusercontent.com/jnodes/shenbury/main/public/assets/images/relics/004-yuan-jilan-ewer/detail-1.jpg',
+        'https://raw.githubusercontent.com/jnodes/shenbury/main/public/assets/images/relics/004-yuan-jilan-ewer/detail-2.jpg',
+        'https://raw.githubusercontent.com/jnodes/shenbury/main/public/assets/images/relics/004-yuan-jilan-ewer/detail-3.jpg',
+        'https://raw.githubusercontent.com/jnodes/shenbury/main/public/assets/images/relics/004-yuan-jilan-ewer/detail-4.jpg'
+    ],
+    thumbnail: 'https://raw.githubusercontent.com/jnodes/shenbury/main/public/assets/images/relics/004-yuan-jilan-ewer/main.jpg',
+    placeholder: 'https://raw.githubusercontent.com/jnodes/shenbury/main/public/assets/images/relics/004-yuan-jilan-ewer/main.jpg',
+    description: 'This spectacular ewer showcases the technical mastery achieved by Yuan potters in high-fired cobalt blue glazes. The dramatic contrast between the deep blue ground and white slip-painted dragon demonstrates the sophisticated decorative techniques of the period.',
+    estimate: { low: 250, high: 400 },
+    currentBid: 325,
+    bidCount: 41,
+    endTime: Date.now() + 86400000 * 8,
+    provenance: 'Private Japanese Collection, Kyoto\nFormerly in the Idemitsu Museum of Arts\nAcquired from Yamanaka & Co., Kyoto, 1955',
+    condition: 'Remarkable condition. Small chip to the spout professionally restored. The cobalt blue glaze of exceptional depth and brilliance.',
+    dimensions: 'Height: 31.3 cm\nWidth: 18.5 cm\nWeight: 1.45 kg',
+    literature: 'Published in "Yuan Blue and White Porcelain", National Palace Museum, Taipei, 1998, no. 47',
+    technicalNotes: 'The cobalt used in this piece has been identified through spectrographic analysis as imported Persian cobalt, confirming its imperial quality.',
+    culturalSignificance: 'Yuan dynasty blue and white represents a revolutionary moment in ceramic history, combining Chinese potting techniques with Islamic aesthetic preferences.',
+    fractionalAvailable: 3000,
+    tokenHolders: 92
+}
             {
                 id: 5,
                 lotNumber: '005',
