--- a/public/index.html
+++ b/public/index.html
@@ -634,9 +634,9 @@
     </section>
     
     <!-- Web3 Integration Script -->
-    <script src="https://cdn.ethers.io/lib/ethers-5.2.0.esm.min.js" type="module"></script>
-    <script type="module">
-        import { ethers } from 'https://cdn.ethers.io/lib/ethers-5.2.0.esm.min.js';
+<script type="module">
+    // Import ethers.js from JSDelivr (already allowed in CSP)
+    import { ethers } from 'https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.esm.min.js';
         
         // Configuration
         const CONFIG = {
