--- a/public/index.html
+++ b/public/index.html
@@ -296,7 +296,7 @@
             width: 100%;
             height: 100%;
             z-index: -1;
-            background-image: url('https://raw.githubusercontent.com/jnodes/shenbury/main/public/assets/images/hero-bg.jpg');
+            background-image: url('/assets/images/hero-bg.jpg');
             background-size: cover;
             background-position: center;
             filter: brightness(0.8);
