--- a/public/index.html
+++ b/public/index.html
@@ -284,7 +284,7 @@
             align-items: center;
             justify-content: center;
             background: linear-gradient(to bottom, rgba(0,0,0,0.4), rgba(0,0,0,0.6)),
-                        linear-gradient(135deg, #f5f5f5 0%, #e0e0e0 100%);
+            url('/assets/images/hero-bg.jpg');
             background-size: cover;
             background-position: center;
         }
