--- a/public/index.html
+++ b/public/index.html
@@ -1645,12 +1645,12 @@
                 ],
                 thumbnail: '/assets/images/relics/001-song-ru-washer/main.jpg',
                 description: 'This extraordinarily rare washer represents the pinnacle of Song ceramic achievement. The vessel is shaped like a six-part flower mouth with three tiny sesame nail marks on the bottom. The distinctive sky-blue glaze with its subtle crackle pattern was considered the finest of all Chinese ceramics. The azure glaze is particularly notable for its purity and the intricate network of ice cracks, which are a hallmark of Ru ware.',
-                estimate: { low: 5000000, high: 8000000 }, // USDT
-                currentBid: 6000000, // USDT
+                estimate: { low: 37000000, high: 55000000 }, // USDT
+                currentBid: 31000000, // USDT
                 minBidIncrement: 100000, // $100k minimum increment
                 bidCount: 47,
                 endTime: Date.now() + 86400000 * 7,
-                provenance: 'Private Collection, Hong Kong\nFormed in the 1970s\nAcquired from J.J. Lally & Co., New York, 1985',
+                provenance: 'Private Collection, China\nFormed in the 1970s\nAcquired from relative., Bejing, 1985',
                 condition: 'Excellent condition with characteristic ice-crackle throughout the glaze. The outer wall features diagonal cuts with willow silk and ice cracks, while the inside is also adorned with ice cracks. Minor expected wear to the foot ring consistent with age.',
                 dimensions: 'Diameter: 14.6 cm\nBottom diameter: 9.6 cm\nHeight: 3.65 cm\nWeight: 285g',
                 literature: 'Compare a similar example in the Palace Museum, Beijing, illustrated in "Complete Collection of Treasures of the Palace Museum: Porcelain of the Song Dynasty (I)", Hong Kong, 1996, pl. 5. A similar piece was sold for HK$294 million at Sotheby\'s Hong Kong in October 2017.',
@@ -1674,12 +1674,12 @@
                 ],
                 thumbnail: '/assets/images/relics/002-song-ru-bottle/main.jpg',
                 description: 'This magnificent bottle exemplifies the restraint and elegance that characterizes the finest Ru ware. Legend says Emperor Huizong once dreamt of a mysterious sky blue hue after rain, penning the verse "After the rain, the sky clears, and this color shall be created" (雨过天青云破处，这般颜色做将来). The bottle features the distinctive "crab claw" crackle pattern (蟹爪纹) unique to Ru kiln pieces, with each irregular crackle being unique.',
-                estimate: { low: 10000000, high: 15000000 }, // USDT
+                estimate: { low: 40000000, high: 75000000 }, // USDT
                 currentBid: 12500000, // USDT
                 minBidIncrement: 250000, // $250k minimum increment
                 bidCount: 62,
                 endTime: Date.now() + 86400000 * 10,
-                provenance: 'Private Collection, Taiwan\nFormerly in the collection of Sakamoto Gorō (1923-2016)\nAcquired at Sotheby\'s Hong Kong, April 2005',
+                provenance: 'Private Collection, China\nFormed in the 1970s\nAcquired from relative., Bejing, 1985',
                 condition: 'Perfect condition. The glaze is of exceptional quality with the desirable "ice crackle" pattern throughout. Features the distinctive "fishtail" bubbles (鱼鳞纹) that cannot be replicated by modern methods.',
                 dimensions: 'Height: 22.8 cm\nDiameter: 12.5 cm\nWeight: 680g',
                 literature: 'For a closely related example, see the bottle in the British Museum, London, published in Jessica Harrison-Hall, "Catalogue of Late Yuan and Ming Ceramics in the British Museum", London, 2001, no. 15:1. Emperor Qianlong collected 11 Ru pieces, now in the Taipei National Palace Museum.',
@@ -1704,12 +1704,12 @@
                 ],
                 thumbnail: '/assets/images/relics/003-ming-cloisonne/main.jpg',
                 description: 'This exceptional censer represents the golden age of Chinese cloisonné production during the Xuande period. Expertly crafted from high-quality copper, it features a flared rim, rounded body, and elegantly arched symmetrical handles. The lid is adorned with three evenly spaced gilt beast knobs, exuding regal presence. The body is covered with sky-blue enamel glaze, with red, yellow, blue, and other vibrant colors meticulously inlaid to create interwoven lotus scrolls.',
-                estimate: { low: 1200000, high: 1800000 }, // USDT
-                currentBid: 1500000, // USDT
+                estimate: { low: 12000000, high: 2700000 }, // USDT
+                currentBid: 15000000, // USDT
                 minBidIncrement: 50000, // $50k minimum increment
                 bidCount: 38,
                 endTime: Date.now() + 86400000 * 6,
-                provenance: 'Private Collection, Hong Kong\nFormerly from the Qing Court Collection\nChristie\'s London, November 1989, lot 234',
+                provenance: 'Private Collection, China\nFormed in the 1970s\nAcquired from relative., Bejing, 1985',
                 condition: 'Excellent condition. Minor restoration to one cloud-scroll on the rim professionally executed. The vibrant enamel colors remain rich and full.',
                 dimensions: 'Height: 28.5 cm\nWidth: 35.2 cm\nWeight: 4.2 kg',
                 literature: 'Illustrated in Harry Garner, "Chinese and Japanese Cloisonné Enamels", London, 1962, pl. 48A',
@@ -1734,12 +1734,12 @@
                 ],
                 thumbnail: '/assets/images/relics/004-yuan-jilan-ewer/main.jpg',
                 description: 'This spectacular ewer showcases the technical mastery achieved by Yuan potters in high-fired cobalt blue glazes. Most Yuan Dynasty porcelains are known for their large size, making this small ewer particularly rare. The Jilan glaze is considered the top variety of porcelain from the Yuan Dynasty, even more precious than the famed Yuan blue and white. The white dragon, depicted with its head raised and tongue extended, appears to be galloping through the sea.',
-                estimate: { low: 2500000, high: 4000000 }, // USDT
+                estimate: { low: 12500000, high: 28000000 }, // USDT
                 currentBid: 3250000, // USDT
                 minBidIncrement: 100000, // $100k minimum increment
                 bidCount: 41,
                 endTime: Date.now() + 86400000 * 8,
-                provenance: 'Private Japanese Collection, Kyoto\nFormerly in the Idemitsu Museum of Arts\nAcquired from Yamanaka & Co., Kyoto, 1955',
+                provenance: 'Private Collection, China\nFormed in the 1970s\nAcquired from relative., Bejing, 1985',
                 condition: 'Remarkable condition. Small chip to the spout professionally restored. The cobalt blue glaze of exceptional depth and brilliance provides a striking backdrop for the elegant white dragon.',
                 dimensions: 'Total Height (with lid): 31.3 cm\nWidth (handle to spout): 18.5 cm\nWeight: 1.45 kg',
                 literature: 'Published in "Yuan Blue and White Porcelain", National Palace Museum, Taipei, 1998, no. 47',
@@ -1764,12 +1764,12 @@
                 ],
                 thumbnail: '/assets/images/relics/005-ming-jingtai-casket/main.jpg',
                 description: 'This masterpiece of Chinese decorative arts epitomizes the pinnacle of cloisonné craftsmanship from the Jingtai period. The casket features a perfectly round shape with a fitted lid and circular base, embodying symmetry and balance. The body is adorned with gilded lotus petal patterns, with blue enamel glaze serving as the background, filled with various colors of enamel to create intricate, entwined lotus patterns.',
-                estimate: { low: 800000, high: 1200000 }, // USDT
+                estimate: { low: 8000000, high: 12000000 }, // USDT
                 currentBid: 950000, // USDT
                 minBidIncrement: 50000, // $50k minimum increment
                 bidCount: 28,
                 endTime: Date.now() + 86400000 * 5,
-                provenance: 'Private European Collection\nFormerly in the collection of a German aristocratic family\nAcquired from Eskenazi Ltd., London, 1992',
+                provenance: 'Private Collection, China\nFormed in the 1970s\nAcquired from relative., Bejing, 1985',
                 condition: 'Excellent condition with bright, full glaze. The patina that has developed over time adds to its allure, giving it an ancient yet elegant appearance. All original gilding intact.',
                 dimensions: 'Diameter: 22.5 cm\nHeight: 12.8 cm\nWeight: 2.1 kg',
                 literature: 'Compare with a similar example in the Victoria and Albert Museum, London, illustrated in "Chinese Cloisonné: The Pierre Uldry Collection", 1989, no. 42',
